fix code example title gap

--- a/public/css/queen.less
+++ b/public/css/queen.less
@@ -17,6 +17,7 @@ pre, code {
 pre {
   font-size: 15px;
   line-height: 1.5;
+  border-left: 0;
 }
 
 pre:before {
